# AUTOBOX

./: .gitignore  .gitlab-ci.yml  README.md  rebuild.sh
ai/: VLM_finetune.ipynb  api.py  api_test_client.py  check_network.py  image_generate.py  image_upscale.py  model_test.py  model_test_vlm.ipynb  requirements.txt  test_interface.py
ai/data_vlm/: train_data.json
ai/docs/: .env.example  API_README.md  SETUP_EXTERNAL_ACCESS.md  cloud tunnel.md  command.md  generate_ocr_data_usage.md  gpu_torch.md  train_paddleocr_usage.md
ai/examples/: README.md  curl_base64_example.sh  java_base64_example.java  javascript_base64_example.js  python_base64_example.py
ai/finetune_lagacy/colab_emv/: VLM_finetune.ipynb  label_config.json
backend/: .dockerignore  .env.example  Dockerfile  backfill_images.py  debug_db.py  decode_images.py  docker-compose.yml  insert_test_data.py  manual_retry.sh  manual_signal.sh  pyproject.toml  requirements.txt  test_export_api.py
backend/DB/: database.sql  database_search.sql
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  alert.py  camera.py  device.py  region.py  vehicle.py  waybill.py
backend/app/routers/: __init__.py  alerts.py  cameras.py  frontend_compat.py  ocr.py  recognition.py  regions.py  stats.py  system.py  vehicle.py  waybills.py  websocket.py
backend/app/schemas/: __init__.py  alert.py  camera.py  common.py  device.py  region.py  vehicle.py  waybill.py
backend/app/services/: __init__.py  mqtt.py  ocr_service.py  websocket.py
backend/docs/: API명세서.md  ERD설계.md  HTTPS_SETUP.md  deployment_guide.md  기능명세서.md  도커명령어.md  라즈베리파이_준비_가이드.md  보안개선가이드.md  사용법.md  실행코드.md
backend/mqtt/: .gitignore  README.md
backend/mqtt/config/: acl  generate-passwd.sh  mosquitto.conf
backend/raspberry-pi/: .env.example
backend/test/: README.md  mqtt_test.py  raspi_test.py
docs/: Communication_Architecture.md  깃랩 사용법.md
embedded/jetson/: nav2_params.yaml
embedded/jetson/map/: dummy.yaml  map_1.pgm  map_1.yaml  map_2_test.pgm  map_2_test.yaml  map_real.pgm  map_real.yaml  realMap1.pgm  realMap1.yaml  realMap2.pgm  realMap2.yaml  realMap3.pgm  realMap3.yaml  testMap11.pgm  testMap11.yaml  testMap12.yaml
embedded/jetson/src/: .gitignore
embedded/jetson/src/cpp_ackermann_odom/: CMakeLists.txt  package.xml
embedded/jetson/src/custom_interfaces/: CMakeLists.txt  package.xml
embedded/jetson/src/custom_interfaces/action/: Parking.action
embedded/jetson/src/fake_odom/: CMakeLists.txt  package.xml
embedded/jetson/src/fake_odom/src/: fake_odom_node.cpp
embedded/jetson/src/mission_manager/: CMakeLists.txt  package.xml
embedded/jetson/src/mission_manager/include/mission_manager/: mission_manager.hpp
embedded/jetson/src/mission_manager/src/: mission_manager.cpp
embedded/jetson/src/mpu6050_cpp_driver/: CMakeLists.txt  package.xml
embedded/jetson/src/mqtt_bridge_pkg/: package.xml  setup.cfg  setup.py
embedded/jetson/src/parking_system/: package.xml  setup.py
embedded/jetson/src/rc_car_bot/: CMakeLists.txt  package.xml
embedded/jetson/src/rc_car_bot/src/: keyboard_latch_node.cpp  pca_drive_node.cpp
embedded/jetson/src/rc_car_bringup/: CMakeLists.txt  package.xml
embedded/jetson/src/rc_car_driver/: package.xml  setup.cfg  setup.py
embedded/jetson/src/ydlidar_ros2_driver/: lidar_subscriber.py
embedded/raspberry-pi/conveyer_belt/: docker-compose.yml
embedded/raspberry-pi/conveyer_belt/config/: mosquitto.conf
embedded/raspberry-pi/conveyer_belt/control_app/: Dockerfile  conveyer_belt_control.py  main.py  requirements.txt
frontend/: .dockerignore  Dockerfile  README.md  index.html  jsconfig.json  nginx.conf  package.json  vite.config.js
frontend/docs/: backend_connection.md  데이터에 필요한 요구사항.md
frontend/src/: App.vue  main.js
frontend/src/api/: index.js  mockData.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: MapEditorPanel.vue  TopNavigation.vue
frontend/src/components/common/: SendResultModal.vue  SettingItem.vue  ToggleSwitch.vue  index.js
frontend/src/components/dashboard/: ChartPanel.vue  LogisticsTable.vue  OcrResultsPanel.vue  RecentScanPanel.vue  StatsGrid.vue  index.js
frontend/src/composables/: index.js  useAlerts.js  useDashboard.js  useSystemStatus.js  useTheme.js
frontend/src/config/: chartOptions.js  index.js
frontend/src/constants/: index.js
frontend/src/router/: index.js
frontend/src/utils/: date.js  index.js
frontend/src/views/: HomeView.vue  LiveVideoView.vue  SettingsView.vue
(+28 files in other folders)
