[project]
name = "autobox-backend"
version = "1.1.0"
description = "AutoBox - 스마트 물류 자동 분류 시스템 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dateutil>=2.8.2",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]
